--- a/plugin.xml
+++ b/plugin.xml
@@ -32,7 +32,7 @@ THE SOFTWARE.
     <description>Cordova DateTime picker plugin</description>
     <license>MIT</license>
     <keywords>cordova,datetime,date,time,datetimepicker,datepicker,timepicker</keywords>
-    <repo>https://github.com/skwasjer/skwas-cordova-plugin-datetimepicker.git</repo>
+    <repo>https://eug17@bitbucket.org/eug17/cordova-plugin-datetimepicker.git</repo>
 
     <js-module src="www/datetimepicker.js" name="DateTimePicker">
         <clobbers target="cordova.plugins.DateTimePicker" />
